--- a/app/src/main/res/layout-xxxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_main.xml
@@ -16,15 +16,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            style="@style/MyTextViewMainStyle"
             android:text="Number of elements:" />
 
         <EditText
@@ -32,7 +31,7 @@
             android:layout_width="wrap_content"
             android:minWidth="50dp"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            style="@style/MyTextViewMainStyle"
             android:text="65356"/>
 
         <Button
@@ -42,7 +41,7 @@
             android:layout_marginLeft="30dp"
             android:gravity="center"
             android:textSize="14sp"
-            android:text="GO" />
+            android:text="Generate" />
 
     </LinearLayout>
 
@@ -54,48 +53,49 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            style="@style/MyTextViewMainStyle"
             android:text="From:" />
 
         <EditText
             android:layout_width="wrap_content"
             android:minWidth="50dp"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            style="@style/MyTextViewMainStyle"
             android:text="0"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            android:paddingLeft="8dp"
+            style="@style/MyTextViewMainStyle"
             android:text="To:"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:minWidth="50dp"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            style="@style/MyTextViewMainStyle"
             android:text="1024"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            android:paddingLeft="8dp"
+            style="@style/MyTextViewMainStyle"
             android:text="Step:"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:minWidth="50dp"
             android:layout_height="match_parent"
-            style="@style/MyTextViewMainStyleXHDPI"
+            style="@style/MyTextViewMainStyle"
             android:text="1024"/>
 
         <Button
@@ -104,7 +104,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="14sp"
-            android:text="GO" />
+            android:text="Generate" />
 
     </LinearLayout>
 
