--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,9 @@
 
     <item
         android:id="@+id/menu_item_main_graph_settings"
-        android:title="Настройки гистограмм" />
+        android:title="Настройки гистограммы #1" />
 
+    <item
+        android:id="@+id/menu_item_main_subgraph_settings"
+        android:title="Настройки гистограммы #2" />
 </menu>
